Empty sticker controller

--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,16 @@
 RewriteEngine On
 
-#Don't to do the other way around coz lots of POST will get redirected.
-RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteRule ^(.*)/$ http://stage.gfx.tw/$1 [R,L]
+AuthName "gfx.tw staging site"
+AuthType Basic
+AuthUserFile "/home/timdream/gfx/stage/htpasswd"
+require valid-user
 
+#Don't do it the other way around coz lots of POST will get redirected.
 RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
-		RewriteRule ^(.*)$ index.php/$1 [L]
+		RewriteRule ^(.*)/$ http://stage.gfx.tw/$1 [R,L]
+
+RewriteRule ^userstickers/$ http://stage.gfx.tw/sticker [R,L]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteRule ^(.*)$ index.php/$1 [L]
