add logs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Untrack config
 application/config/database.php
 application/config/gfx.php
+system/logs/*
 
 # Untrack var files
 stickerimages/features
