Fixing rewrite rules :'(

--- a/.htaccess
+++ b/.htaccess
@@ -2,4 +2,6 @@ RewriteEngine On
 
 RewriteRule ^userstickers/(.*)/featurecard.html https://%{HTTP_HOST}/stickers/ [R,L]
 RewriteRule ^userstickers/(.*)/(.+)$ https://%{HTTP_HOST}/stickers/$2 [R,L]
-RewriteRule . https://moztw.org/ [R,L]
+RewriteRule ^stickers.+$ $0 [L]
+
+RewriteRule .* https://moztw.org/ [R,L]
